=> all is init before change state of button.
-Add caption to kspread_dlg_format
-Add modal for all dialogbox (bug reported by jp.martin" <jpmartin@iroise.com>)

2000-05-01 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add modal for all MessageBox (bug reported by jp.martin" <jpmartin@iroise.com>)
-Now when you change boder color in toolbar all borders into area selected
changed (idea of jp.martin" <jpmartin@iroise.com>)
=>thanks to jp.martin
-Now undoLayout works 
-Bug Fix

2000-05-03 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can give height and width of cells in kspread_dlg_layout
-Add new function INV => multiply by -1 each value
-bug fix

2000-05-04 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Change cursor when you want to resize column or row
I used now good cursor for each type (column or row)
Bug report by jp.martin <jpmartin@iroise.com> thanks
-bug fix

2000-05-05 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can select "Top" "Middle" "Bottom" position of text in menubar
(idea given by jp.martin <jpmartin@iroise.com> thanks )
-Bug fix in kspread_dlg_layout bug reported by jp.martin <jpmartin@iroise.com>
thanks

2000-05-06 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can show area selected example A1:B5
(idea given by jp.martin <jpmartin@iroise.com> thanks )
-Now there is LC mode => you can show area selected 
as 3Lx5C, L1C1 (A1)
-bug fix
-Now you can resize differents row or column
icon lo22-action-adjustrow.png lo22-action-adjustcol.png
lo22-action-middle.png,lo22-action-top.png,lo22-action-bottom.png
created by jp.martin <jpmartin@iroise.com> thanks
-Improved kspread_dlg_resize
-start to replace QMessageBox by KMessageBox