@@ -679,6 +679,167 @@ void KSpreadTable::setSelectionFont( const QPoint &_marker, const char *_font, i
     }
 }
 
+void KSpreadTable::setSelectionSize( const QPoint &_marker,int _size )
+{
+    m_pDoc->setModified( true );
+
+    bool selected = ( m_rctSelection.left() != 0 );
+
+    // Complete rows selected ?
+    if ( selected && m_rctSelection.right() == 0x7FFF )
+    {
+      QIntDictIterator<KSpreadCell> it( m_dctCells );
+      for ( ; it.current(); ++it )
+      {
+	long l = it.currentKey();
+	int row = l & 0xFFFF;
+	if ( m_rctSelection.top() <= row && m_rctSelection.bottom() >= row )
+	{
+	  it.current()->setDisplayDirtyFlag();
+	  it.current()->setTextFontSize( (it.current()->textFontSize()+ _size));
+	  it.current()->clearDisplayDirtyFlag();
+	}
+      }
+
+      emit sig_updateView( this, m_rctSelection );
+      return;
+    }
+    // Complete columns selected ?
+    else if ( selected && m_rctSelection.bottom() == 0x7FFF )
+    {
+      QIntDictIterator<KSpreadCell> it( m_dctCells );
+      for ( ; it.current(); ++it )
+      {
+	long l = it.currentKey();
+	int col = l >> 16;
+	if ( m_rctSelection.left() <= col && m_rctSelection.right() >= col )
+	{
+	  it.current()->setDisplayDirtyFlag();
+	  it.current()->setTextFontSize( (it.current()->textFontSize()+ _size) );
+	  it.current()->clearDisplayDirtyFlag();
+	}
+      }
+
+      emit sig_updateView( this, m_rctSelection );
+      return;
+    }
+    else
+    {
+	QRect r( m_rctSelection );
+	if ( !selected )
+	    r.setCoords( _marker.x(), _marker.y(), _marker.x(), _marker.y() );
+	
+	KSpreadUndoCellLayout *undo;
+	if ( !m_pDoc->undoBuffer()->isLocked() )
+	{
+	    undo = new KSpreadUndoCellLayout( m_pDoc, this, r );
+	    m_pDoc->undoBuffer()->appendUndo( undo );
+	}
+
+	for ( int x = r.left(); x <= r.right(); x++ )
+	    for ( int y = r.top(); y <= r.bottom(); y++ )
+	    {		
+	      KSpreadCell *cell = cellAt( x, y );
+
+	      if ( cell == m_pDefaultCell )
+	      {
+		cell = new KSpreadCell( this, x, y );
+		int key = y + ( x * 0x10000 );
+		m_dctCells.insert( key, cell );
+	      }
+
+	      cell->setDisplayDirtyFlag();		
+	      cell->setTextFontSize( (cell->textFontSize()+ _size) );
+	      cell->clearDisplayDirtyFlag();
+	    }
+
+	emit sig_updateView( this, r );
+    }
+}
+
+void KSpreadTable::setSelectionUpperLower( const QPoint &_marker,int _type )
+{
+    m_pDoc->setModified( true );
+
+    bool selected = ( m_rctSelection.left() != 0 );
+
+    // Complete rows selected ?
+    if ( selected && m_rctSelection.right() == 0x7FFF )
+    {
+      QIntDictIterator<KSpreadCell> it( m_dctCells );
+      for ( ; it.current(); ++it )
+      {
+	long l = it.currentKey();
+	int row = l & 0xFFFF;
+	if ( m_rctSelection.top() <= row && m_rctSelection.bottom() >= row )
+	{
+	  if(!it.current()->isValue() && !it.current()->isBool() &&!it.current()->isFormular() && !it.current()->isDefault()&& !it.current()->text().isEmpty()&&(it.current()->text().find('*')!=0)&&(it.current()->text().find('!')!=0))
+	  	{
+	  	it.current()->setDisplayDirtyFlag();
+	  	if(_type==-1)
+	  		it.current()->setText( (it.current()->text().lower()));
+	  	else if(_type==1)
+	  		it.current()->setText( (it.current()->text().upper()));
+	  	it.current()->clearDisplayDirtyFlag();
+	  	}
+	}
+      }
+
+      emit sig_updateView( this, m_rctSelection );
+      return;
+    }
+    // Complete columns selected ?
+    else if ( selected && m_rctSelection.bottom() == 0x7FFF )
+    {
+      QIntDictIterator<KSpreadCell> it( m_dctCells );
+      for ( ; it.current(); ++it )
+      {
+	long l = it.currentKey();
+	int col = l >> 16;
+	if ( m_rctSelection.left() <= col && m_rctSelection.right() >= col )
+	{
+	  if(!it.current()->isValue() && !it.current()->isBool() &&!it.current()->isFormular() &&!it.current()->isDefault()&&!it.current()->text().isEmpty()	  &&(it.current()->text().find('*')!=0)&&(it.current()->text().find('!')!=0))
+		{
+	  	it.current()->setDisplayDirtyFlag();
+	  	if(_type==-1)
+	  		it.current()->setText( (it.current()->text().lower()));
+	  	else if(_type==1)
+	  		it.current()->setText( (it.current()->text().upper()));
+	  	it.current()->clearDisplayDirtyFlag();
+	  	}
+	}
+      }
+
+      emit sig_updateView( this, m_rctSelection );
+      return;
+    }
+    else
+    {
+	QRect r( m_rctSelection );
+	if ( !selected )
+	    r.setCoords( _marker.x(), _marker.y(), _marker.x(), _marker.y() );
+	
+	for ( int x = r.left(); x <= r.right(); x++ )
+	    for ( int y = r.top(); y <= r.bottom(); y++ )
+	    {		
+	      KSpreadCell *cell = cellAt( x, y );
+       	      if(!cell->isValue() && !cell->isBool() &&!cell->isFormular() &&!cell->isDefault()&&!cell->text().isEmpty()&&(cell->text().find('*')!=0)&&(cell->text().find('!')!=0))
+		{
+
+	      	cell->setDisplayDirtyFlag();		
+	      	if(_type==-1)
+	  		cell->setText( (cell->text().lower()));
+	  	else if(_type==1)
+	  		cell->setText( (cell->text().upper()));
+	      	cell->clearDisplayDirtyFlag();
+	       	}
+	    }
+
+	emit sig_updateView( this, r );
+    }
+}
+
+
 void KSpreadTable::setSelectionTextColor( const QPoint &_marker, QColor tb_Color )
 {
     m_pDoc->setModified( true );
