@@ -1,0 +1,28 @@
+/* XPM */
+static char*lo22[]={
+"20 20 5 1",
+". c None",
+"a c #000000",
+"b c #303030",
+"# c #585858",
+"c c #ffffff",
+"....................",
+"....................",
+"....................",
+".....#.a....a.#.....",
+".....#a......a#.....",
+".....baaaaaaaaa.....",
+".....#b......a#.....",
+".....#.a....a.#.....",
+".....#........#.....",
+".....aaaaaaaaaa.....",
+".....acccccccca.....",
+".....acccccccca.....",
+".....acccccccca.....",
+".....acccccccca.....",
+".....acccccccca.....",
+".....acccccccca.....",
+".....acccccccca.....",
+".....acccccccca.....",
+"....................",
+"...................."};
